[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bill-bolt"
version = "1.0.0"
description = "Lightning-fast invoicing CLI for freelancers. Generate professional PDF invoices."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Bill Bolt Contributors"}]
keywords = ["invoice", "freelancer", "billing", "pdf", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]

[project.scripts]
bill-bolt = "bill_bolt.cli:cli"

[project.urls]
Homepage = "https://github.com/bill-bolt/bill-bolt"
Issues = "https://github.com/bill-bolt/bill-bolt/issues"
